--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
     <jdk.version>1.7</jdk.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <site.encoding>UTF-8</site.encoding>
-    <storm.version>0.9.4</storm.version>
+    <storm.version>1.0.0</storm.version>
     <infinispan.version>7.0.2.Final</infinispan.version>
     <camel.version>2.13.3</camel.version>
     <elasticsearch.version>1.4.1</elasticsearch.version>
@@ -198,10 +198,28 @@
           <artifactId>slf4j-log4j12</artifactId>
         </exclusion>
         <exclusion>
+          <groupId>org.apache.cassandra</groupId>
+          <artifactId>cassandra-all</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.cassandra</groupId>
+          <artifactId>cassandra-thrift</artifactId>
+        </exclusion>
+        <exclusion>
           <groupId>org.mortbay.jetty</groupId>
           <artifactId>jetty</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.cassandra</groupId>
+        <artifactId>cassandra-all</artifactId>
+        <version>3.5</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.cassandra</groupId>
+        <artifactId>cassandra-thrift</artifactId>
+        <version>3.5</version>
     </dependency>
     <dependency>
       <groupId>storm</groupId>
