--- a/pom.xml
+++ b/pom.xml
@@ -188,46 +188,21 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>com.hmsonline</groupId>
-      <artifactId>storm-cassandra</artifactId>
-      <version>0.4.0-rc4</version>
-      <optional>true</optional>
-      <exclusions>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-log4j12</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.apache.cassandra</groupId>
-          <artifactId>cassandra-all</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.apache.cassandra</groupId>
-          <artifactId>cassandra-thrift</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.mortbay.jetty</groupId>
-          <artifactId>jetty</artifactId>
-        </exclusion>
-      </exclusions>
+        <groupId>org.apache.storm</groupId>
+        <artifactId>storm-cassandra</artifactId>
+        <version>1.0.0</version>
     </dependency>
     <dependency>
-        <groupId>org.apache.cassandra</groupId>
-        <artifactId>cassandra-all</artifactId>
-        <version>3.5</version>
+        <groupId>com.netflix.astyanax</groupId>
+        <artifactId>astyanax</artifactId>
+        <version>3.9.0</version>
     </dependency>
     <dependency>
-        <groupId>org.apache.cassandra</groupId>
-        <artifactId>cassandra-thrift</artifactId>
-        <version>3.5</version>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.4</version>
     </dependency>
-    <dependency>
-      <groupId>storm</groupId>
-      <artifactId>storm-kestrel</artifactId>
-      <version>0.9.0-wip5-multischeme</version>
-      <optional>true</optional>
-    </dependency>
-    
+
     <!-- WebSocket -->
     <dependency>
       <groupId>org.glassfish.tyrus</groupId>
