--- a/pom.xml
+++ b/pom.xml
@@ -205,9 +205,14 @@
         <version>1.0.0</version>
     </dependency>
     <dependency>
-        <groupId>com.netflix.astyanax</groupId>
-        <artifactId>astyanax</artifactId>
-        <version>3.9.0</version>
+      <groupId>com.netflix.astyanax</groupId>
+      <artifactId>astyanax-core</artifactId>
+      <version>3.9.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.datastax.cassandra</groupId>
+      <artifactId>cassandra-driver-core</artifactId>
+      <version>3.0.0</version>
     </dependency>
     <dependency>
         <groupId>commons-io</groupId>
